// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dark theme add mode should match snapshot 1`] = `
<div
  class="flex flex-col flex-1 items-center justify-start pt-10 pb-5 px-5"
>
  <form
    class="flex flex-col gap-5 w-full"
  >
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="runnerId"
      >
        Runner Number
      </label>
      <input
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="runnerIdInput"
        enterkeyhint="next"
        id="runnerId"
        min="0"
        pattern="\\d*"
        type="number"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="name"
      >
        Name
      </label>
      <input
        autocapitalize="words"
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="runnerNameInput"
        enterkeyhint="next"
        id="name"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="grade"
      >
        Grade
      </label>
      <select
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="gradeSelect"
        id="grade"
        required=""
      >
        <option
          disabled=""
          value=""
        >
          Select 
          Grade
        </option>
        <option
          value="Pre-K"
        >
          Pre-K
        </option>
        <option
          value="K"
        >
          Kindergarten
        </option>
        <option
          value="1"
        >
          1st Grade
        </option>
        <option
          value="2"
        >
          2nd Grade
        </option>
        <option
          value="3"
        >
          3rd Grade
        </option>
        <option
          value="4"
        >
          4th Grade
        </option>
        <option
          value="5"
        >
          5th Grade
        </option>
        <option
          value="6"
        >
          6th Grade
        </option>
        <option
          value="7"
        >
          7th Grade
        </option>
        <option
          value="8"
        >
          8th Grade
        </option>
        <option
          value="N/A"
        >
          N/A
        </option>
      </select>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="gender"
      >
        Gender
      </label>
      <select
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="genderSelect"
        id="gender"
        required=""
      >
        <option
          disabled=""
          value=""
        >
          Select 
          Gender
        </option>
        <option
          value="Boy"
        >
          Boy
        </option>
        <option
          value="Girl"
        >
          Girl
        </option>
      </select>
    </div>
    <div
      class="flex justify-between gap-5 flex-row-reverse"
    >
      <button
        class="py-3 px-5 rounded-lg border-none text-white active:bg-blend-darken bg-primary bg-primary text-white"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`dark theme edit mode should match snapshot 1`] = `
<div
  class="flex flex-col flex-1 items-center justify-start pt-10 pb-5 px-5"
>
  <form
    class="flex flex-col gap-5 w-full"
  >
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5 text-disabled-text"
        for="runnerId"
      >
        Runner Number
      </label>
      <input
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="runnerIdInput"
        disabled=""
        enterkeyhint="next"
        id="runnerId"
        min="0"
        pattern="\\d*"
        type="number"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="name"
      >
        Name
      </label>
      <input
        autocapitalize="words"
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="runnerNameInput"
        enterkeyhint="next"
        id="name"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="grade"
      >
        Grade
      </label>
      <select
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="gradeSelect"
        id="grade"
        required=""
      >
        <option
          disabled=""
          value=""
        >
          Select 
          Grade
        </option>
        <option
          value="Pre-K"
        >
          Pre-K
        </option>
        <option
          value="K"
        >
          Kindergarten
        </option>
        <option
          value="1"
        >
          1st Grade
        </option>
        <option
          value="2"
        >
          2nd Grade
        </option>
        <option
          value="3"
        >
          3rd Grade
        </option>
        <option
          value="4"
        >
          4th Grade
        </option>
        <option
          value="5"
        >
          5th Grade
        </option>
        <option
          value="6"
        >
          6th Grade
        </option>
        <option
          value="7"
        >
          7th Grade
        </option>
        <option
          value="8"
        >
          8th Grade
        </option>
        <option
          value="N/A"
        >
          N/A
        </option>
      </select>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="gender"
      >
        Gender
      </label>
      <select
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="genderSelect"
        id="gender"
        required=""
      >
        <option
          disabled=""
          value=""
        >
          Select 
          Gender
        </option>
        <option
          value="Boy"
        >
          Boy
        </option>
        <option
          value="Girl"
        >
          Girl
        </option>
      </select>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="lapCount"
      >
        Lap Count
      </label>
      <input
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="lapCountInput"
        enterkeyhint="done"
        id="lapCount"
        min="0"
        pattern="\\d*"
        type="number"
        value="0"
      />
    </div>
    <div
      class="flex justify-between gap-5 flex-row-reverse"
    >
      <button
        class="py-3 px-5 rounded-lg border-none text-white active:bg-blend-darken bg-primary bg-primary text-white"
      >
        Submit
      </button>
      <button
        class="py-3 px-5 rounded-lg border-none text-white active:bg-blend-darken bg-error"
      >
        Delete
      </button>
    </div>
  </form>
</div>
`;

exports[`light theme add mode should match snapshot 1`] = `
<div
  class="flex flex-col flex-1 items-center justify-start pt-10 pb-5 px-5"
>
  <form
    class="flex flex-col gap-5 w-full"
  >
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="runnerId"
      >
        Runner Number
      </label>
      <input
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="runnerIdInput"
        enterkeyhint="next"
        id="runnerId"
        min="0"
        pattern="\\d*"
        type="number"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="name"
      >
        Name
      </label>
      <input
        autocapitalize="words"
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="runnerNameInput"
        enterkeyhint="next"
        id="name"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="grade"
      >
        Grade
      </label>
      <select
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="gradeSelect"
        id="grade"
        required=""
      >
        <option
          disabled=""
          value=""
        >
          Select 
          Grade
        </option>
        <option
          value="Pre-K"
        >
          Pre-K
        </option>
        <option
          value="K"
        >
          Kindergarten
        </option>
        <option
          value="1"
        >
          1st Grade
        </option>
        <option
          value="2"
        >
          2nd Grade
        </option>
        <option
          value="3"
        >
          3rd Grade
        </option>
        <option
          value="4"
        >
          4th Grade
        </option>
        <option
          value="5"
        >
          5th Grade
        </option>
        <option
          value="6"
        >
          6th Grade
        </option>
        <option
          value="7"
        >
          7th Grade
        </option>
        <option
          value="8"
        >
          8th Grade
        </option>
        <option
          value="N/A"
        >
          N/A
        </option>
      </select>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="gender"
      >
        Gender
      </label>
      <select
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="genderSelect"
        id="gender"
        required=""
      >
        <option
          disabled=""
          value=""
        >
          Select 
          Gender
        </option>
        <option
          value="Boy"
        >
          Boy
        </option>
        <option
          value="Girl"
        >
          Girl
        </option>
      </select>
    </div>
    <div
      class="flex justify-between gap-5 flex-row-reverse"
    >
      <button
        class="py-3 px-5 rounded-lg border-none text-white active:bg-blend-darken bg-primary bg-primary text-white"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`light theme edit mode should match snapshot 1`] = `
<div
  class="flex flex-col flex-1 items-center justify-start pt-10 pb-5 px-5"
>
  <form
    class="flex flex-col gap-5 w-full"
  >
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5 text-disabled-text"
        for="runnerId"
      >
        Runner Number
      </label>
      <input
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="runnerIdInput"
        disabled=""
        enterkeyhint="next"
        id="runnerId"
        min="0"
        pattern="\\d*"
        type="number"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="name"
      >
        Name
      </label>
      <input
        autocapitalize="words"
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="runnerNameInput"
        enterkeyhint="next"
        id="name"
        value=""
      />
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="grade"
      >
        Grade
      </label>
      <select
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="gradeSelect"
        id="grade"
        required=""
      >
        <option
          disabled=""
          value=""
        >
          Select 
          Grade
        </option>
        <option
          value="Pre-K"
        >
          Pre-K
        </option>
        <option
          value="K"
        >
          Kindergarten
        </option>
        <option
          value="1"
        >
          1st Grade
        </option>
        <option
          value="2"
        >
          2nd Grade
        </option>
        <option
          value="3"
        >
          3rd Grade
        </option>
        <option
          value="4"
        >
          4th Grade
        </option>
        <option
          value="5"
        >
          5th Grade
        </option>
        <option
          value="6"
        >
          6th Grade
        </option>
        <option
          value="7"
        >
          7th Grade
        </option>
        <option
          value="8"
        >
          8th Grade
        </option>
        <option
          value="N/A"
        >
          N/A
        </option>
      </select>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="gender"
      >
        Gender
      </label>
      <select
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="genderSelect"
        id="gender"
        required=""
      >
        <option
          disabled=""
          value=""
        >
          Select 
          Gender
        </option>
        <option
          value="Boy"
        >
          Boy
        </option>
        <option
          value="Girl"
        >
          Girl
        </option>
      </select>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <label
        class="p-0  ml-1.5"
        for="lapCount"
      >
        Lap Count
      </label>
      <input
        class="w-full p-4 border-solid bg-input-bg rounded-md"
        data-testid="lapCountInput"
        enterkeyhint="done"
        id="lapCount"
        min="0"
        pattern="\\d*"
        type="number"
        value="0"
      />
    </div>
    <div
      class="flex justify-between gap-5 flex-row-reverse"
    >
      <button
        class="py-3 px-5 rounded-lg border-none text-white active:bg-blend-darken bg-primary bg-primary text-white"
      >
        Submit
      </button>
      <button
        class="py-3 px-5 rounded-lg border-none text-white active:bg-blend-darken bg-error"
      >
        Delete
      </button>
    </div>
  </form>
</div>
`;
